gatekeeper/templates/k8sdisallowedlatesttag.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8sdisallowedlatesttag
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
spec:
  crd:
    spec:
      names:
        kind: K8sDisallowedLatestTag
      validation:
        openAPIV3Schema:
          type: object
  targets:
  - target: admission.k8s.gatekeeper.sh
    rego: |
      package k8sdisallowedlatesttag

      get_pod_spec(obj) = spec {
        obj.kind == "Pod"
        spec := obj.spec
      }
      get_pod_spec(obj) = spec {
        obj.kind == "CronJob"
        spec := obj.spec.jobTemplate.spec.template.spec
      }
      get_pod_spec(obj) = spec {
        obj.kind != "Pod"
        obj.kind != "CronJob"
        spec := obj.spec.template.spec
      }
      all_containers[c] {
        spec := get_pod_spec(input.review.object)
        c := spec.containers[_]
      }
      all_containers[c] {
        spec := get_pod_spec(input.review.object)
        c := spec.initContainers[_]
      }
      violation[{"msg": msg}] {
        c := all_containers[_]
        endswith(c.image, ":latest")
        msg := sprintf("container %v uses forbidden image tag :latest (%v)", [c.name, c.image])
      }
