gatekeeper/templates/k8srequiredlimits.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8srequiredlimits
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
spec:
  crd:
    spec:
      names:
        kind: K8sRequiredLimits
      validation:
        openAPIV3Schema:
          type: object
  targets:
  - target: admission.k8s.gatekeeper.sh
    rego: |
      package k8srequiredlimits

      get_pod_spec(obj) = spec {
        obj.kind == "Pod"
        spec := obj.spec
      }
      get_pod_spec(obj) = spec {
        obj.kind == "CronJob"
        spec := obj.spec.jobTemplate.spec.template.spec
      }
      get_pod_spec(obj) = spec {
        obj.kind != "Pod"
        obj.kind != "CronJob"
        spec := obj.spec.template.spec
      }
      all_containers[c] {
        spec := get_pod_spec(input.review.object)
        c := spec.containers[_]
      }
      all_containers[c] {
        spec := get_pod_spec(input.review.object)
        c := spec.initContainers[_]
      }
      violation[{"msg": msg}] {
        c := all_containers[_]
        not c.resources.limits.cpu
        msg := sprintf("container %v must set resources.limits.cpu", [c.name])
      }
      violation[{"msg": msg}] {
        c := all_containers[_]
        not c.resources.limits.memory
        msg := sprintf("container %v must set resources.limits.memory", [c.name])
      }
